remove sqlite3 lib

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
     "lowdb": "^7.0.1",
-    "nanoid": "^5.0.9",
-    "sqlite3": "^5.1.7"
+    "nanoid": "^5.0.9"
   }
 }
