--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "lowdb": "^7.0.1",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "nodemailer": "^6.10.0"
   }
 }
